# wr_app

./: .gitignore  README.md  ecgsyn.py  main.py  pyproject.toml  pyvenv.cfg  setup.cfg
ecgsyn_wr/: App.py  Constants.py  Models.py  Panels.py  __init__.py  utils.py
src/wr_app/: App.py  Constants.py  Models.py  Panels.py  __init__.py
wr_app/: App.py  Constants.py  Models.py  Panels.py  __init__.py  run.py
