[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "wr_app"
version = "0.0.1"

authors = [
  { name="Santiago Federico Caracciolo", email="santiago.caracciolo@gmail.com" },
]

description = "A desktop application to design Wistar Rat (WR) beats from ECG parameters."
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "PySide6",
  "vispy",
  "superqt",
  "wr_transform @ git+https://github.com/sfcaracciolo/wr_transform.git",
  "ecg_simulator @ git+https://github.com/sfcaracciolo/ecg_simulator.git"
]