[metadata]
name = ecgsyn_wr
version = 0.0.1
author = Santiago F. Caracciolo
author_email = scaracciolo@conicet.gov.ar
description = A desktop application to design Wistar Rat (WR) beats from ECG parameters.
url = https://github.com/sfcaracciolo/ecgsyn_wr.git

[options]
packages = find:
install_requires =
   numpy <= 1.20.3
   PySide6
   vispy
   superqt
   sympy
   scipy
   dill