[metadata]
name = wr_app
version = 0.0.1
author = Santiago F. Caracciolo
author_email = scaracciolo@conicet.gov.ar
description = A desktop application to design Wistar Rat (WR) beats from ECG parameters.
url = https://github.com/sfcaracciolo/wr_app.git

[options]
packages = find:
install_requires =
   wr_core @ git+https://github.com/sfcaracciolo/wr_core.git
   PySide6
   vispy
   superqt
   colorednoise